--- a/AdminBot.csproj
+++ b/AdminBot.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.Cells" Version="23.9.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
